# proxann

./: .gitignore  LICENSE  README.md  commands.md  get_info_models.py  get_info_models_wmd.py  get_user_study_data.py  main.py  proxann.py  proxann_eval.py  proxann_user_study.py  pyproject.toml  readme.md  requirements.txt  run_user_studies.sh  run_user_study.py  run_user_study_bills.py  run_user_study_valset.py
analysis/: create_labeled_evaluation_data.py
bash_scripts/: commands_to_run_vllm.txt  generate_embeddings.sh  get_top_docs.sh  jsonfy.sh  jsonfy_one_model.sh  jsonfy_pilot.sh  jsonfy_pilot_wmd.sh  jsonfy_v2.sh  jsonify_one_model.sh  jsonify_pilot.sh  run_proxann.sh  run_proxann_multiple.sh  run_user_studies.sh  train_model.sh  train_models.sh  wget_mallet.sh
config/: config.conf  config.yaml  config_eval.conf  config_pilot.conf  config_pilot_bills.conf  config_pilot_old.conf  config_pilot_wiki.conf  config_test.conf
data/: all_cohrs.csv  all_cohrs_wiki.csv
data/cohrs/: all_cohrs.csv  (+1 more)
evaluation_scripts/: README.md  alt_test_tm_eval.ipynb  disagreement.ipynb  distinguish.py  elbow_method_revised.ipynb  evaluate_human_tasks.py  evaluate_llm_agreement.py  find_disagreeable_docs.py  top_ranking.ipynb
notebooks/: bertopic_output.ipynb  check_matching.ipynb  disagreement.ipynb  elbow_method.ipynb  get_user_study_data.ipynb  lda_mallet_vs_tomotopy.ipynb  table2.ipynb  test_paper_wang.ipynb  top_docs_sample_vs_thr.ipynb  top_ranking.ipynb  training_bertopic.ipynb
python_scripts/: create_labeled_evaluation_data.py  parse_annotations.py  top_ranking_tau_table.py
(+508 files in other folders)
